# CUDAAAAGH

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: remote_int_calcs.py  remote_int_server.py
src/CUDAAAAGH/: __init__.py
test/: test_computed_int.py
