[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CUDAAAAGH"
version = "0.1.2"
description = "Centralized Underage Distributed Arithmetic - Automated Assignment And Group Hashing"
authors = [
    { name = "Robert Heaton", email = "robqheaton@gmail.com.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "fastapi",
    "uvicorn",
    "aioconsole",
    "pydantic"
]

[project.urls]
Homepage = "https://github.com/robert/CUDAAAAGH"
Repository = "https://github.com/robert/CUDAAAAGH"
